# cupter

./: CMakeLists.txt  CMakePresets.json  README.md  go.mod  go.sum  main.go  schemasCompile.sh
internal/ui/: cupter.cmb  cupter.ui  homeEmpty.ui  homeGameCard.ui  homeNotEmpty.ui  style.css
src/: Application.cpp  Application.h  DB.cpp  DB.h  main.cpp
src/assets/: all.ui  allTab.ui  cupter.cmb  favourites.ui  favouritesEmpty.ui  favouritesTab.ui  headerbar.ui  listEntry.ui  mainPage.ui  mainwindow.ui
src/assets/gio/: gschemas.compiled  io.github.androeat.cupter.gschema.xml  io.github.androeat.cupter.resource.xml
src/ui/: HeaderBar.cpp  HeaderBar.h  MainNavView.cpp  MainNavView.h  MainPage.cpp  MainPage.h  Tabs.cpp  Tabs.h
